[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/bubble.png" type="Texture" id=1]
[ext_resource path="res://assets/mipi (1).png" type="Texture" id=2]
[ext_resource path="res://assets/shade.png" type="Texture" id=3]
[ext_resource path="res://message.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://theme.tres" type="Theme" id=6]

[sub_resource type="Animation" id=1]
resource_name = "bobble_1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("bubble2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.554785, 0.574349, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "bobble_2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("bubble2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.535887, 0.535887, 1 ),
"update": 0,
"values": [ 0.0, 15.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "bobble_3"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("bubble2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.517632, 0.535887, 1 ),
"update": 0,
"values": [ Vector2( 0, -88 ), Vector2( 0, -100 ), Vector2( 0, -88 ) ]
}

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float intensity: hint_range(0f,1f);

void fragment(){
	COLOR.rgb = vec3(0f);
	COLOR.a = float( (0.5 + distance(vec2(UV.x, 0.5), UV)) * 2f * intensity > 0.5);
//	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV);
	
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/intensity = 0.0

[sub_resource type="Animation" id=6]
resource_name = "open"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1560, -260 ), Vector2( -760, -260 ), Vector2( -900, -260 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 15.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("icon:material:shader_param/intensity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( -1560, -260 )
z_index = 5
script = ExtResource( 4 )

[node name="mipi (1)" type="Sprite" parent="."]
position = Vector2( -32, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 100, 200, 1700, 1400 )

[node name="bubble" type="Sprite" parent="."]
self_modulate = Color( 0.239216, 0.239216, 0.239216, 1 )
position = Vector2( -120, 104 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="bubble2" type="Sprite" parent="bubble"]
self_modulate = Color( 0.294118, 0.294118, 0.294118, 1 )
position = Vector2( 0, -88 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
offset = Vector2( 0, -40 )

[node name="shade" type="Sprite" parent="bubble/bubble2"]
position = Vector2( 0, -103.333 )
rotation = 1.57079
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="bubble"]
anims/bobble_1 = SubResource( 1 )
anims/bobble_2 = SubResource( 2 )
anims/bobble_3 = SubResource( 3 )

[node name="Polygon2D2" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -200, 88, -200, 304, 136, 304, 136, 88 )

[node name="Polygon2D3" type="Polygon2D" parent="."]
color = Color( 0.933333, 0.933333, 0.933333, 1 )
polygon = PoolVector2Array( -184, 96, -184, 288, 120, 288, 120, 96 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -176.0
margin_top = 100.0
margin_right = 112.0
margin_bottom = 260.0
rect_min_size = Vector2( 288, 160 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 288.0
margin_bottom = 35.0

[node name="likely" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_top = 10.0
margin_right = 288.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 288.0
margin_bottom = 74.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer5"]
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 3 )
expand = true

[node name="label" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 39.0
margin_top = 10.0
margin_right = 288.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
margin_left = -168.0
margin_top = 260.0
margin_right = -49.9999
margin_bottom = 288.0
theme = ExtResource( 6 )
text = "accuracy: 0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( -32, 80 )
scale = Vector2( 2.61065, 3.50654 )
texture = ExtResource( 5 )

[node name="Polygon2D" type="Polygon2D" parent="."]
invert_enable = true
invert_border = 20.0
polygon = PoolVector2Array( -176.083, -128, 112.653, -128, 128, -112.599, 128, 280, 104, 296, -176, 296, -192, 280, -192, -112.599 )

[node name="toggle_player" type="AnimationPlayer" parent="."]
anims/open = SubResource( 6 )
[connection signal="animation_finished" from="bubble/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="toggle_player" to="." method="_on_toggle_player_animation_finished"]
